--- a/templates/room-detail_1.html
+++ b/templates/room-detail_1.html
@@ -174,8 +174,8 @@ Detail
                   <div class="ms-4 flex-shrink-0"><a class="btn btn-icon btn-light-primary btn-xs shadow-sm rounded-circle ms-2 mb-2" href="#"><i class="fi-facebook"></i></a><a class="btn btn-icon btn-light-primary btn-xs shadow-sm rounded-circle ms-2 mb-2" href="#"><i class="fi-linkedin"></i></a></div>
                 </div>
                 <ul class="list-unstyled border-bottom mb-4 pb-4">
-                  <li><a class="nav-link fw-normal p-0" href="tel:3025550107"><i class="fi-phone mt-n1 me-2 align-middle opacity-60"></i>(+977) {{room.author.phone_number}}</a></li>
-                  <li><a class="nav-link fw-normal p-0" href="mailto:floyd_miles@email.com"><i class="fi-mail mt-n1 me-2 align-middle opacity-60"></i>{{room.author.email}}</a></li>
+                  <li><a class="nav-link fw-normal p-0" href="tel:{{room.author.phone_number}}"><i class="fi-phone mt-n1 me-2 align-middle opacity-60"></i>(+977) {{room.author.phone_number}}</a></li>
+                  <li><a class="nav-link fw-normal p-0" href="mailto:{{room.author.email}}"><i class="fi-mail mt-n1 me-2 align-middle opacity-60"></i>{{room.author.email}}</a></li>
                 </ul>
                 
               </div>
